lint: add unit test
